[package]
name = "relay"
version = "2.0.0"
edition = "2021"
description = "High-performance TCP/UDP preconnection relay with zero-copy splice forwarding"
license = "MIT"

[dependencies]
mio = { version = "1.2", features = ["os-poll", "net", "os-ext"] }
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.31", features = ["socket", "poll", "signal", "resource", "fs", "ioctl", "zerocopy"] }
libc = "0.2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
