[package]
name = "relay"
version = "2.0.0"
edition = "2021"
description = "High-performance TCP/UDP preconnection relay with zero-copy splice forwarding"
license = "MIT"

[dependencies]
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.31", features = ["socket", "poll", "signal", "resource", "fs", "ioctl", "zerocopy", "event", "net"] }
libc = "0.2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
